# lean

./: .appveyor.yml  .gitignore  .travis.yml  OLD_README.md  README.md  bors.toml  scratch.lean  scratch.ts  shell.nix  widget.lean
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: ccpp.yml  on-push.yml
doc/: changes.md  export_format.md  faq.md  fixing_tests.md  widget_server.md
doc/make/: index.md  msys2.md
extras/latex/: lstlean.md  lstlean.tex  sample.tex
leanpkg/leanpkg/: json.lean  lean_version.lean  main.lean  manifest.lean  resolve.lean  toml.lean
nix/: derivation.nix
script/: ci-win.sh  ci.sh  ci_emscripten.sh  ci_emscripten_docker.sh  ci_emscripten_zip.sh  compare_leanchecker_timings.py  mk_all.sh  rm_all.sh  travis_long.sh
src/: CMakeLists.txt
src/api/: CMakeLists.txt  module.cpp  name.cpp
src/checker/: CMakeLists.txt  checker.cpp  simple_pp.cpp  text_import.cpp  text_import.h
src/cmake/: repack_tar_zst.cmake
src/frontends/lean/: CMakeLists.txt  brackets.cpp  builtin_cmds.cpp  builtin_cmds.h  builtin_exprs.cpp  builtin_exprs.h  calc.cpp  calc.h  cmd_table.h  completion.cpp  decl_attributes.cpp  decl_attributes.h  decl_cmds.cpp  decl_cmds.h  decl_util.cpp  decl_util.h  definition_cmds.cpp  definition_cmds.h  dependencies.cpp  disambig_manager.cpp  disambig_manager.h  elaborator.cpp  elaborator.h  eqn_api.cpp  eqn_api.h  inductive_cmds.cpp  inductive_cmds.h  info_manager.cpp  info_manager.h  init_module.cpp  interactive.cpp  interactive.h  json.cpp  json.h  local_context_adapter.cpp  local_decls.h  local_level_decls.h  match_expr.cpp  module_parser.cpp  module_parser.h  (+35 more)
src/init/: init.cpp
src/kernel/: CMakeLists.txt  expr.cpp  expr.h  expr_maps.h  instantiate.h  type_checker.cpp
src/kernel/inductive/: inductive.cpp  inductive.h
src/shell/: CMakeLists.txt  emscripten.h  lean.cpp  lean_js.h  lean_js.html  leandoc.cpp  server.cpp  server.h
src/tests/shared/: CMakeLists.txt
src/tests/shell/: CMakeLists.txt  shell.cpp  shell_test.expected.out
src/tests/util/: CMakeLists.txt
src/tests/util/numerics/: CMakeLists.txt  mpz.cpp
src/util/: CMakeLists.txt  debug.cpp  file_lock.cpp  flet.h  hash.cpp  hash.h  json.hpp  lean_json.h  lean_path.cpp  lean_path.h  line_endings.cpp  line_endings.h  log_tree.cpp  log_tree.h  memory.cpp  name.cpp  name.h  optional.h  path.cpp  path.h  small_object_allocator.h  task.cpp  task.h  task_builder.h  thread.h
src/util/numerics/: CMakeLists.txt  double.cpp  float.cpp  mpq.cpp  mpq.h  mpz.cpp  mpz.h  numeric_traits.cpp  xnumeral.h  zpz.h
src/util/sexpr/: CMakeLists.txt  format.cpp  format.h  option_declarations.h
tests/lean/: 123-1.lean  123-1.lean.expected.out  123-2.lean  123-2.lean.expected.out  1277.lean.expected.out  1327.lean.expected.out  1334b.lean.expected.out  1513.lean.expected.out  1669.lean  1669.lean.expected.out  172.lean  172.lean.expected.out  1766.lean  1794.lean.expected.out  1817.lean.expected.out  1836.lean.expected.out  1859.lean.expected.out  1862.lean  1862.lean.expected.out  1898.lean  1898.lean.expected.out  1917.lean.expected.out  1952.lean  1952.lean.expected.out  197c.lean  197c.lean.expected.out  268c.lean  268c.lean.expected.out  334c.lean  334c.lean.expected.out  388.lean  395a.lean  397c.lean  397c.lean.expected.out  398c.lean  398c.lean.expected.out  584a.lean.expected.out  634d.lean.expected.out  641.lean  641.lean.expected.out  (+302 more)
tests/lean/extra/: lt_rec.lean
tests/lean/fail/: conv_for.lean
tests/lean/importing/: test_importing.sh
tests/lean/interactive/: 85c.input  85c.input.expected.out  assumption.lean.expected.out  complete.lean.expected.out  complete_import.lean.expected.out  complete_trailing_period.lean.expected.out  do_info.lean.expected.out  field_info.lean.expected.out  focus.lean.expected.out  goal_info.lean  goal_info.lean.expected.out  goal_info_rw.lean.expected.out  goal_info_semicolon.lean  goal_info_semicolon.lean.expected.out  hole5.lean  hole5.lean.expected.out  info.lean.expected.out  info1.lean.expected.out  info_goal.lean.expected.out  info_id_pre_elab.lean.expected.out  info_import.input  info_import.input.expected.out  info_tactic.lean.expected.out  my_tac_class.lean  my_tac_class.lean.expected.out  parser_itactic.lean  parser_itactic.lean.expected.out  rb_map_ts.lean  rb_map_ts.lean.expected.out  run_single.sh  symbols.input  symbols.input.expected.out  term_goal_info.lean  term_goal_info.lean.expected.out  widget1.input  widget1.input.expected.out  widget1.lean  widget1.lean.expected.out  widget2.input  (+3 more)
trash/fin/: ops.lean
(+263 files in other folders)
